--- a/Assignment 1/Assignment 1-Part A-EDA.ipynb
+++ b/Assignment 1/Assignment 1-Part A-EDA.ipynb
@@ -4,21 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How is the data distributed? (10 %)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What are the summary statistics? (10 %)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Are there anomalies/outliers? (10 %)"
+    "### Exploratory Data Analysis\n",
+    "\n",
+    "In this notebook, we observe the summary statistics, Data distributions and anlayze if there are any outliers in the dataset"
    ]
   },
   {
@@ -50,6 +38,13 @@
    ],
    "source": [
     "df=pd.read_csv(\"cleanData.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The below table shows the summary statistics of all the columns including the categorical columns. As we can see, most of the categorical columns have more than 30 unique values"
    ]
   },
   {
@@ -244,6 +239,13 @@
    ],
    "source": [
     "df.describe(include='object')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We describe the summary statistics of just the numerical columns"
    ]
   },
   {
@@ -442,6 +444,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets look at the Data distributions of all the numerical columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -461,6 +470,20 @@
     "plt.close('all')\n",
     "df.hist(figsize=(20, 20), bins=50, xlabelsize=8, ylabelsize=8);\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We Notice that the column \"ORIGIN\" is likely to have an outlier in its data. We will be performing an outlier analysis on some of the columns which might possibly have outliers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let us look at the data distributions of some of the categorical tables. (As most of them have large number of categories, we are not looking at the distributions for those)"
    ]
   },
   {
@@ -610,6 +633,20 @@
     "    sns.countplot(x=df_categorical[c], data=df_categorical, palette=\"Greens_d\")\n",
     "    plt.figure(figsize=(20,20))\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We notice that Chromosome 2 has most number of variants. The variants which have moderate impact are highest in number and Single nucleotide has the highest number of variants"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we perform outlier analysis on some of the numerical columns which we think might have anomolous data. We find that the column Origin has one very obvious outlier. So does CADD_PHRED and CADD_RAW"
    ]
   },
   {
@@ -764,6 +801,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we look at the correlation between each columns. Since most of the columns are currently categorical, we are able to plot the correlation for just the numerical columns. The rest of the columns are transformed and plotted in the analysis notebook.\n",
+    "Please refer to the Readme file for more information"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -788,12 +833,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We notice that AF_ESP, AF_EXAC, AF_TGP are positively correlated to one another. Also CADD_PHRED and CADD_RAW ae positively correlated. The dark blue shows negative correlations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "#for correlation between the categorical variables, refer to the analysis notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now make stacked barplots by class to observed how many variants have conflicting classifications"
    ]
   },
   {
@@ -812,6 +871,13 @@
    "outputs": [],
    "source": [
     "gene_ct.drop('All', axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the gene which is being classified. We notice that TTN and BRCA2 have most number of conflicting classification"
    ]
   },
   {
@@ -835,6 +901,13 @@
     "gene_ct.drop('All', axis=1, inplace=True)\n",
     "\n",
     "gene_ct.plot.bar(stacked=True, figsize=(12, 4));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Single_Nucleotide_variant is the only variant in CLNVC having conflicting classifications"
    ]
   },
   {
@@ -889,6 +962,13 @@
     "mc_ct.drop('All', axis=1, inplace=True)\n",
     "\n",
     "mc_ct.plot.bar(stacked=True, figsize=(12, 4));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chromosome 2 has the highest number of variants and also the highest number of conflicting classification"
    ]
   },
   {
