--- a/Assignment 1/Assignment 1-Part B-Analysis.ipynb
+++ b/Assignment 1/Assignment 1-Part B-Analysis.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A clear description of the dependent and why the analysis used was chosen. (10 %)\n",
-    "\n",
+    "### Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this Analysis, we are classifying the column \"Class\" in the dataset. Hence this becomes a dependent variable.\n",
     "* Class = 1 when there has been a ClinVar variant will have conflicting classificaton. \n",
     "* Class = 0 when there is consistent classification\n",
@@ -134,6 +139,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have all the features in a numerical form, let us look at the correlation plot of the dataset now"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The blue regions show negative correlations and the red are positive correlations. We notice that most of the columns are infact correlated to one another."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -160,12 +179,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Classification using Logistic regression, Random forest, descion tree"
+    "Classification using Logistic regression, Random forest, descion tree"
    ]
   },
   {
@@ -198,6 +215,13 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistic regression"
    ]
   },
   {
@@ -236,6 +260,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Decision tree classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -260,6 +291,13 @@
     "dt.fit(X_train, y_train)\n",
     "pred_dt = dt.predict(X_test)\n",
     "print( \"Classification Report :\\n \", classification_report(y_test, pred_dt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random forest classifier"
    ]
   },
   {
@@ -303,6 +341,13 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Grid search-Logistic regression"
    ]
   },
   {
@@ -409,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +463,7 @@
        "5000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +474,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7602979448981423"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "metrics.accuracy_score(y_test, pred_lr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Grid search-Decision tree  classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +516,7 @@
        "            splitter='best')>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,6 +570,33 @@
    "source": [
     "pred_dt=best_model_dt.predict(X_test)\n",
     "print( \"Classification Report :\\n \", classification_report(y_test, pred_dt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7784259176164409"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.accuracy_score(y_test, pred_dt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Grid search-random forest classifier"
    ]
   },
   {
@@ -572,10 +672,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7948487839899488"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.accuracy_score(y_test, pred_rf)"
+   ]
   }
  ],
  "metadata": {
