Assignment 2 comments added

--- a/Assignment 2/Binary Classification/Binary Classification.ipynb
+++ b/Assignment 2/Binary Classification/Binary Classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Binary Classification"
+    "## Binary Classification"
    ]
   },
   {
@@ -24,6 +24,13 @@
     "import time\n",
     "import json\n",
     "from distutils.util import strtobool"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting the variables to be passed in AutoML"
    ]
   },
   {
@@ -48,6 +55,13 @@
     "name=None \n",
     "server_path=None  \n",
     "analysis=0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining the functions to be used for processing of AutoML"
    ]
   },
   {
@@ -374,6 +388,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a directory with the runID name to store the results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 222,
    "metadata": {},
@@ -491,6 +512,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import file into H2O"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 225,
    "metadata": {},
@@ -560,6 +588,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting the target variable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 227,
    "metadata": {},
@@ -599,6 +634,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check and impute for missing values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 230,
    "metadata": {},
@@ -623,37 +665,6 @@
     "# impute missing values\n",
     "\n",
     "_=impute_missing_values(df,X, scale)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if analysis == 3:\n",
-    "    classification=False\n",
-    "elif analysis == 2:\n",
-    "    classification=True\n",
-    "elif analysis == 1:\n",
-    "    classification=True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification)"
    ]
   },
   {
@@ -785,12 +796,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are saving all the important information about the features in the meta_data variable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
     "meta_data['variables']=allV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split the dataset and run H2O AutoML for the training dataset"
    ]
   },
   {
@@ -828,6 +853,13 @@
    "outputs": [],
    "source": [
     "meta_data['model_execution_time'] = time.time() - model_start_time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display the autoML leaderboard"
    ]
   },
   {
@@ -1081,6 +1113,13 @@
    "source": [
     "if se is not None:\n",
     "    mod_best=h2o.get_model(se)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Confusion matrix for the best model"
    ]
   },
   {
@@ -3086,6 +3125,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other models besides the best model. Let us check the performance for some of them"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 259,
    "metadata": {},
@@ -3371,6 +3417,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Distributed random forest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 270,
    "metadata": {},
@@ -3413,6 +3466,13 @@
     "        cf_df.to_csv(run_id+'_drf_confusion_matrix.csv')\n",
     "    except:\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradiant boosting machine"
    ]
   },
   {
@@ -4078,117 +4138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'run_id': '6S2O5A9iv',\n",
-       " 'start_time': 1539648408.1445932,\n",
-       " 'target': None,\n",
-       " 'max_models': 9,\n",
-       " 'run_time': 333,\n",
-       " 'scale': False,\n",
-       " 'classification': False,\n",
-       " 'balance': False,\n",
-       " 'balance_threshold': 0.2,\n",
-       " 'project': None,\n",
-       " 'end_time': 1539648863.8254156,\n",
-       " 'execution_time': 455.6808223724365,\n",
-       " 'nthreads': 1,\n",
-       " 'min_mem_size': 6,\n",
-       " 'analysis': 0,\n",
-       " 'X': ['CHROM',\n",
-       "  'POS',\n",
-       "  'ORIGIN',\n",
-       "  'cDNA_position',\n",
-       "  'CDS_position',\n",
-       "  'Protein_position',\n",
-       "  'STRAND',\n",
-       "  'REF',\n",
-       "  'ALT',\n",
-       "  'CLNDISDB',\n",
-       "  'CLNDN',\n",
-       "  'CLNVC',\n",
-       "  'CLNVI',\n",
-       "  'MC',\n",
-       "  'Allele',\n",
-       "  'Consequence',\n",
-       "  'IMPACT',\n",
-       "  'SYMBOL',\n",
-       "  'Feature_type',\n",
-       "  'Feature',\n",
-       "  'BIOTYPE',\n",
-       "  'EXON',\n",
-       "  'Amino_acids',\n",
-       "  'Codons',\n",
-       "  'BAM_EDIT',\n",
-       "  'AF_ESP',\n",
-       "  'AF_EXAC',\n",
-       "  'AF_TGP',\n",
-       "  'CLNHGVS',\n",
-       "  'LoFtool',\n",
-       "  'CADD_PHRED',\n",
-       "  'CADD_RAW'],\n",
-       " 'variables': {'CHROM': 'int',\n",
-       "  'POS': 'int',\n",
-       "  'REF': 'enum',\n",
-       "  'ALT': 'enum',\n",
-       "  'AF_ESP': 'real',\n",
-       "  'AF_EXAC': 'real',\n",
-       "  'AF_TGP': 'real',\n",
-       "  'CLNDISDB': 'enum',\n",
-       "  'CLNDN': 'enum',\n",
-       "  'CLNHGVS': 'string',\n",
-       "  'CLNVC': 'enum',\n",
-       "  'CLNVI': 'enum',\n",
-       "  'MC': 'enum',\n",
-       "  'ORIGIN': 'int',\n",
-       "  'CLASS': 'enum',\n",
-       "  'Allele': 'enum',\n",
-       "  'Consequence': 'enum',\n",
-       "  'IMPACT': 'enum',\n",
-       "  'SYMBOL': 'enum',\n",
-       "  'Feature_type': 'enum',\n",
-       "  'Feature': 'enum',\n",
-       "  'BIOTYPE': 'enum',\n",
-       "  'EXON': 'enum',\n",
-       "  'cDNA_position': 'int',\n",
-       "  'CDS_position': 'int',\n",
-       "  'Protein_position': 'int',\n",
-       "  'Amino_acids': 'enum',\n",
-       "  'Codons': 'enum',\n",
-       "  'STRAND': 'int',\n",
-       "  'BAM_EDIT': 'enum',\n",
-       "  'LoFtool': 'real',\n",
-       "  'CADD_PHRED': 'real',\n",
-       "  'CADD_RAW': 'real'},\n",
-       " 'model_execution_time': 435.2010908126831,\n",
-       " 'mod_best': 'StackedEnsemble_BestOfFamily_0_AutoML_20181015_200653',\n",
-       " 'mod_best_algo': 'stackedensemble',\n",
-       " 'models': ['XRT_0_AutoML_20181015_200653',\n",
-       "  'DRF_0_AutoML_20181015_200653',\n",
-       "  'GBM_grid_0_AutoML_20181015_200653_model_2',\n",
-       "  'GLM_grid_0_AutoML_20181015_200653_model_0',\n",
-       "  'DeepLearning_0_AutoML_20181015_200653',\n",
-       "  'StackedEnsemble_BestOfFamily_0_AutoML_20181015_200653']}"
-      ]
-     },
-     "execution_count": 278,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "meta_data"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Partial Dependence Plot"
+    "### Plots"
    ]
   },
   {
@@ -4198,6 +4157,13 @@
    "outputs": [],
    "source": [
     "plots=aml.leaderboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we will plot the variable importance plot, partial dependence plot"
    ]
   },
   {
@@ -5718,6 +5684,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ROC curve from the confusion matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 289,
    "metadata": {},
@@ -5780,21 +5753,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Clean up\n",
-    "#os.chdir(server_path)"
+    "os.chdir(server_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 303,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H2O session _sid_8a13 closed.\n"
+     ]
+    }
+   ],
    "source": [
-    "#h2o.cluster().shutdown()"
+    "h2o.cluster().shutdown()"
    ]
   }
  ],
