--- a/Assignment 2/Multiclass Classification/Multiclass.ipynb
+++ b/Assignment 2/Multiclass Classification/Multiclass.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiclass Classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -17,6 +24,13 @@
     "import time\n",
     "import json\n",
     "from distutils.util import strtobool"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize the variable"
    ]
   },
   {
@@ -41,6 +55,13 @@
     "name=None \n",
     "server_path=None  \n",
     "analysis=0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Starter functions for the AutoML model"
    ]
   },
   {
@@ -321,6 +342,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add column headers to the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
@@ -384,6 +412,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a directory to store all the results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -413,6 +448,13 @@
     "run_dir = os.path.join(server_path,run_id)\n",
     "os.mkdir(run_dir)\n",
     "os.chdir(run_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize H2O and import the data"
    ]
   },
   {
@@ -615,6 +657,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check and impute the missing values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
@@ -768,6 +817,13 @@
    "outputs": [],
    "source": [
     "meta_data['variables']=allV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split the dataframe into train and test and train the AutoML model"
    ]
   },
   {
@@ -1495,6 +1551,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "StackedEnsemble is the best model for this dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
@@ -2003,6 +2066,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 115,
    "metadata": {},
@@ -2135,6 +2205,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 121,
    "metadata": {},
@@ -2144,8 +2221,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variable Importance for deeplearning model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2154,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2445,7 @@
        "20    safety.missing(NA)             0.000000           0.000000    0.000000"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2408,6 +2492,13 @@
    ],
    "source": [
     "varImp.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Confusion matrix"
    ]
   },
   {
@@ -3143,68 +3234,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead>\n",
-       "<tr><th>predict  </th><th style=\"text-align: right;\">        acc</th><th style=\"text-align: right;\">       good</th><th style=\"text-align: right;\">   unacc</th><th style=\"text-align: right;\">      vgood</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.000866648</td><td style=\"text-align: right;\">1.82336e-05</td><td style=\"text-align: right;\">0.999088</td><td style=\"text-align: right;\">2.72623e-05</td></tr>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.000866466</td><td style=\"text-align: right;\">1.82153e-05</td><td style=\"text-align: right;\">0.999088</td><td style=\"text-align: right;\">2.72577e-05</td></tr>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.00127717 </td><td style=\"text-align: right;\">3.53003e-05</td><td style=\"text-align: right;\">0.998647</td><td style=\"text-align: right;\">4.01343e-05</td></tr>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.000871765</td><td style=\"text-align: right;\">1.85661e-05</td><td style=\"text-align: right;\">0.999082</td><td style=\"text-align: right;\">2.74108e-05</td></tr>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.00122566 </td><td style=\"text-align: right;\">2.98771e-05</td><td style=\"text-align: right;\">0.998704</td><td style=\"text-align: right;\">4.05198e-05</td></tr>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.000897944</td><td style=\"text-align: right;\">1.90879e-05</td><td style=\"text-align: right;\">0.999053</td><td style=\"text-align: right;\">2.98528e-05</td></tr>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.00129051 </td><td style=\"text-align: right;\">3.08591e-05</td><td style=\"text-align: right;\">0.998633</td><td style=\"text-align: right;\">4.59316e-05</td></tr>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.000867116</td><td style=\"text-align: right;\">1.82684e-05</td><td style=\"text-align: right;\">0.999087</td><td style=\"text-align: right;\">2.72783e-05</td></tr>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.00121806 </td><td style=\"text-align: right;\">3.40517e-05</td><td style=\"text-align: right;\">0.99871 </td><td style=\"text-align: right;\">3.83169e-05</td></tr>\n",
-       "<tr><td>unacc    </td><td style=\"text-align: right;\">0.000907715</td><td style=\"text-align: right;\">1.9436e-05 </td><td style=\"text-align: right;\">0.999043</td><td style=\"text-align: right;\">3.01462e-05</td></tr>\n",
-       "</tbody>\n",
-       "</table>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#os.chdir(server_path)"
+    "os.chdir(server_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H2O session _sid_b037 closed.\n"
+     ]
+    }
+   ],
    "source": [
-    "#h2o.cluster().shutdown()"
+    "h2o.cluster().shutdown()"
    ]
   }
  ],
