--- a/Assignment 2/Regression/Regression.ipynb
+++ b/Assignment 2/Regression/Regression.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
@@ -29,21 +36,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#df2=pd.read_csv(\"Test_u94Q5KV (1).csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#data=pd.concat([df1,df2], ignore_index=True)"
+    "Initialize path variables"
    ]
   },
   {
@@ -68,6 +64,13 @@
     "name=None \n",
     "server_path=None  \n",
     "analysis=0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define starter fuctions for the model"
    ]
   },
   {
@@ -366,6 +369,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a folder to store all the results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
@@ -395,6 +405,13 @@
     "run_dir = os.path.join(server_path,run_id)\n",
     "os.mkdir(run_dir)\n",
     "os.chdir(run_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize H2O"
    ]
   },
   {
@@ -571,6 +588,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set Target variable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
@@ -603,6 +627,13 @@
    "outputs": [],
    "source": [
     "#df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check and impute the missing variables"
    ]
   },
   {
@@ -779,6 +810,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split the dataset and run AutoML on the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -831,6 +869,13 @@
    "outputs": [],
    "source": [
     "meta_data['model_execution_time'] = time.time() - model_start_time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display leaderboard"
    ]
   },
   {
@@ -2460,6 +2505,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 125,
    "metadata": {},
@@ -2628,6 +2680,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 131,
    "metadata": {},
@@ -2643,6 +2702,13 @@
    "outputs": [],
    "source": [
     "varImp=h2o.get_model(plots[1,\"model_id\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variable importance plot"
    ]
   },
   {
@@ -2814,6 +2880,13 @@
    ],
    "source": [
     "varImp.varimp_plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Partial Dependence plot"
    ]
   },
   {
@@ -3315,6 +3388,13 @@
    ],
    "source": [
     "varImp.partial_plot(data=df, cols=['Item_MRP','Outlet_Identifier','Outlet_Type','Item_Type','Item_Weight'], figsize=(30,30))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scoring history and metrics"
    ]
   },
   {
@@ -4139,27 +4219,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#os.chdir(server_path)"
+    "os.chdir(server_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H2O session _sid_94bd closed.\n"
+     ]
+    }
+   ],
    "source": [
-    "#h2o.cluster().shutdown()"
+    "h2o.cluster().shutdown()"
    ]
   }
  ],
